--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@
 
 /* first box */
 
-.first-box {
+.first-box, .second-box {
     width: auto;
     display: grid;
     height: auto;
@@ -75,7 +75,7 @@
 
 .chamber-one, .chamber-two, .chamber-three, .chamber-four {
     width: 250px;
-    height: 160px;
+    height: 180px;
     display: flex;
 }
 
@@ -105,6 +105,8 @@
     grid-area: four;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    position: relative;
 }
 
 /* dropdown first-box */
@@ -136,7 +138,6 @@
 .chamber-one-secondbox, .chamber-two-secondbox, .chamber-three-secondbox, .chamber-four-secondbox {
     width: 250px;
     height: 200px;
-    border: solid black;
 }
 
 .chamber-one-secondbox {
@@ -315,16 +316,16 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    margin-top: 50px;
 }
 
 .showDropdownFirstBox {
     display: flex;
     align-items: center;
     text-decoration: none;
-    margin-top: 15px;
     color: black;
     font-size: 13px;
+    position: absolute;
+    bottom: 30px;
   
 }
 
@@ -368,7 +369,7 @@
 
 .rangering {
     position: absolute;
-    top: 0;
+    top: -40px;
     left: 0;
     width: 50px;
     height: 40px;
