--- a/style.css
+++ b/style.css
@@ -43,15 +43,16 @@
 }
 
 .swollow {
-    color: grey;
+    color: blue;
     text-align: center;
-    margin-top: 20px;
+    margin-top: 70px;
+    margin-bottom: 70px;
 }
 
 /* main boxes */
 
 .wrapper-around-main-boxes {
-    margin-top: 100px;
+    margin-top: 50px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -112,18 +113,24 @@
 
 /* dropdown first-box */
 
-.dropdown-first-box {
+.dropdown-first-box, .dropdown-second-box {
     width: auto;
-    height: auto;
+    max-width: 1000px;
+    height: 600px;
     display: none;
-    grid-template-areas: "one two three four";
     border-left: solid lightgray 1px;
     border-right: solid lightgray 1px;
     border-bottom: solid lightgray 1px;
 }
 
-/* content first box */
+.dropdown-first-box-content {
+    padding: 20px;
+}
 
+.overskrift-i-dropdownbox {
+    text-align: center;
+    margin-top: 30px;
+}
 
 
 /* second box */
@@ -143,12 +150,7 @@ position: relative;
 
 /* dropdown second box */
 
-.dropdown-second-box {
-    width: auto;
-    height: auto;
-    display: none;
-    grid-template-areas: "one two three four";
-}
+
 
 /* content second box */
 
@@ -315,6 +317,7 @@ position: relative;
     font-size: 13px;
     position: absolute;
     bottom: 30px;
+    cursor: pointer;
   
 }
 
@@ -426,10 +429,22 @@ position: relative;
     padding: 5px;
 }
 
+.toppvalg1 {
+    position: absolute;
+    top: 18px;
+    font-weight: bold;
+    border: solid 1px black;
+    background-color: blueviolet;
+    color: white;
+    border-radius: 40px;
+    padding: 7px;
+}
+
+
 /* hide/show dropdowns */
 
 .show {
-    display: grid;
+    display: block;
 }
 
 /* media quieries */
