--- a/style.css
+++ b/style.css
@@ -118,7 +118,7 @@
 .ikoner {
     position: absolute;
     margin-top: 30px;
-    margin-left: 200px;
+    margin-left: 110px;
     color: grey;
     font-size: 20px;
 }
@@ -425,6 +425,7 @@
 
     .dropdown-first-box, .dropdown-second-box, .dropdown-third-box, .dropdown-fourth-box, .dropdown-fift-box {
         width: 500px;
+        margin-left: 45%;
     }
   }
 
@@ -459,6 +460,8 @@
         top: 100px;
     }
 
+   
+
   }
 
   @media only screen and (max-width: 770px) {
@@ -480,5 +483,10 @@
       .first-box, .second-box, .third-box, .fourth-box, .fift-box {
           margin-left: 0px;
       }
+
+      .dropdown-first-box, .dropdown-second-box, .dropdown-third-box, .dropdown-fourth-box, .dropdown-fift-box {
+        margin-left: 50%;
+        margin-right: 50%;
+    }
 
   }
