--- a/style.css
+++ b/style.css
@@ -149,6 +149,7 @@
     left: 325px;
     font-size: 1.5rem;
     min-width: 354px;
+    color: rgb(9, 37, 139);
 }
 
 .second-box, .third-box, .fourth-box, .fift-box {
